[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revard_hello_world"
version = "0.0.1"
authors = [
  { name="Example Author", email="taraszav@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/revard/pkg_py_proj"
"Bug Tracker" = "https://github.com/revard/pkg_py_proj/issues"